--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -407,6 +407,7 @@
     <Compile Include="RRHH\ro_empleado_x_ro_tipoNomina_Info.cs" />
     <Compile Include="RRHH\ro_empleado_x_rubro_acumulado_Info.cs" />
     <Compile Include="RRHH\ro_empleado_x_titulos_Info.cs" />
+    <Compile Include="RRHH\ro_FormulaHorasRecargo_Info.cs" />
     <Compile Include="RRHH\ro_Historico_Liquidacion_Vacaciones_Det_Info.cs" />
     <Compile Include="RRHH\ro_Historico_Liquidacion_Vacaciones_Info.cs" />
     <Compile Include="RRHH\ro_historico_vacaciones_x_empleado_Info.cs" />
