--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -376,6 +376,7 @@
     <Compile Include="RRHH\ro_empleado_x_ro_tipoNomina_Bus.cs" />
     <Compile Include="RRHH\ro_empleado_x_rubro_acumulado_Bus.cs" />
     <Compile Include="RRHH\ro_empleado_x_titulos_Bus.cs" />
+    <Compile Include="RRHH\ro_FormulaHorasRecargo_Bus.cs" />
     <Compile Include="RRHH\ro_Historico_Liquidacion_Vacaciones_Bus.cs" />
     <Compile Include="RRHH\ro_Historico_Liquidacion_Vacaciones_Det_Bus.cs" />
     <Compile Include="RRHH\ro_historico_vacaciones_x_empleado_Bus.cs" />
