--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ActivoFijo\Af_Activo_fijo_tipo_Bus.cs" />
     <Compile Include="ActivoFijo\Af_CatalogoTipo_Bus.cs" />
     <Compile Include="ActivoFijo\Af_Catalogo_Bus.cs" />
+    <Compile Include="ActivoFijo\Af_Departamento_Bus.cs" />
     <Compile Include="ActivoFijo\Af_Depreciacion_Bus.cs" />
     <Compile Include="ActivoFijo\Af_Depreciacion_Det_Bus.cs" />
     <Compile Include="ActivoFijo\Af_Mej_Baj_Activo_Bus.cs" />
