--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ActivoFijo\Af_Activo_fijo_tipo_Data.cs" />
     <Compile Include="ActivoFijo\Af_CatalogoTipo_Data.cs" />
     <Compile Include="ActivoFijo\Af_Catalogo_Data.cs" />
+    <Compile Include="ActivoFijo\Af_Departamento_Data.cs" />
     <Compile Include="ActivoFijo\Af_Depreciacion_Data.cs" />
     <Compile Include="ActivoFijo\Af_Depreciacion_Det_Data.cs" />
     <Compile Include="ActivoFijo\Af_Mej_Baj_Activo_Data.cs" />
