--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -244,6 +244,7 @@
     <Compile Include="Areas\ActivoFijo\Controllers\CatalogoAFController.cs" />
     <Compile Include="Areas\ActivoFijo\Controllers\CatalogoTipoAFController.cs" />
     <Compile Include="Areas\ActivoFijo\Controllers\CategoriaAFController.cs" />
+    <Compile Include="Areas\ActivoFijo\Controllers\DepartamentoAFController.cs" />
     <Compile Include="Areas\ActivoFijo\Controllers\DepreciacionAFController.cs" />
     <Compile Include="Areas\ActivoFijo\Controllers\ParametroAFController.cs" />
     <Compile Include="Areas\ActivoFijo\Controllers\RevalorizacionActivoController.cs" />
@@ -9484,6 +9485,7 @@
     <Content Include="Areas\Contabilidad\Views\PlanDeCuentas\_GridViewPartial_plancta_importacion.cshtml" />
     <Content Include="Areas\Produccion\Views\Fabricacion\Anular.cshtml" />
     <Content Include="Areas\Contabilidad\Views\PlanDeCuentas\_GridViewPartial_anio_fiscal_importacion.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\DepartamentoAF\Index.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
