--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9486,6 +9486,10 @@
     <Content Include="Areas\Produccion\Views\Fabricacion\Anular.cshtml" />
     <Content Include="Areas\Contabilidad\Views\PlanDeCuentas\_GridViewPartial_anio_fiscal_importacion.cshtml" />
     <Content Include="Areas\ActivoFijo\Views\DepartamentoAF\Index.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\DepartamentoAF\_GridViewPartial_departamento_af.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\DepartamentoAF\Nuevo.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\DepartamentoAF\Modificar.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\DepartamentoAF\Anular.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
