--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Facturacion\fa_guia_remision_Bus.cs" />
     <Compile Include="Facturacion\fa_guia_remision_det_Bus.cs" />
     <Compile Include="Facturacion\fa_guia_remision_det_x_factura_Bus.cs" />
+    <Compile Include="Facturacion\fa_NivelDescuento_Bus.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_Bus.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_det_Bus.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_x_fa_factura_NotaDeb_Bus.cs" />
