--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -456,6 +456,7 @@
     <Compile Include="Facturacion\fa_guia_remision_Data.cs" />
     <Compile Include="Facturacion\fa_guia_remision_det_Data.cs" />
     <Compile Include="Facturacion\fa_guia_remision_det_x_factura_Data.cs" />
+    <Compile Include="Facturacion\fa_NivelDescuento_Data.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_Data.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_det_Data.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_x_fa_factura_NotaDeb_Data.cs" />
