--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Facturacion\fa_guia_remision_det_Info.cs" />
     <Compile Include="Facturacion\fa_guia_remision_det_x_factura_Info.cs" />
     <Compile Include="Facturacion\fa_guia_remision_Info.cs" />
+    <Compile Include="Facturacion\fa_NivelDescuento_Info.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_det_Info.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_Info.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_x_fa_factura_NotaDeb_Info.cs" />
