--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -322,6 +322,7 @@
     <Compile Include="Areas\Facturacion\Controllers\FacturaController.cs" />
     <Compile Include="Areas\Facturacion\Controllers\FormaPagoController.cs" />
     <Compile Include="Areas\Facturacion\Controllers\GuiaRemisionController.cs" />
+    <Compile Include="Areas\Facturacion\Controllers\NivelDescuentoController.cs" />
     <Compile Include="Areas\Facturacion\Controllers\NotaDeCreditoFacturacionController.cs" />
     <Compile Include="Areas\Facturacion\Controllers\NotaDeDebitoFacturacionController.cs" />
     <Compile Include="Areas\Facturacion\Controllers\ParametrosFacturacionController.cs" />
@@ -9490,6 +9491,11 @@
     <Content Include="Areas\ActivoFijo\Views\DepartamentoAF\Nuevo.cshtml" />
     <Content Include="Areas\ActivoFijo\Views\DepartamentoAF\Modificar.cshtml" />
     <Content Include="Areas\ActivoFijo\Views\DepartamentoAF\Anular.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NivelDescuento\Index.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NivelDescuento\_GridViewPartial_nivel_dscto_fa.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NivelDescuento\Nuevo.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NivelDescuento\Modificar.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NivelDescuento\Anular.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
