--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9606,7 +9606,9 @@
     <Folder Include="Areas\RRHH\Models\" />
     <Folder Include="Areas\SeguridadAcceso\Models\" />
     <Folder Include="Content\file\" />
-    <Folder Include="Content\imagenes\" />
+    <Folder Include="Content\imagenes\activofijo\" />
+    <Folder Include="Content\imagenes\empleados\" />
+    <Folder Include="Content\imagenes\productos\" />
     <Folder Include="Content\videos\" />
   </ItemGroup>
   <ItemGroup>
