--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9510,6 +9510,7 @@
     <Content Include="Areas\ActivoFijo\Views\ActivoFijo\_GridViewPartial_departamentoAF_importacion.cshtml" />
     <Content Include="Areas\ActivoFijo\Views\ActivoFijo\_GridViewPartial_catalogoAF_importacion.cshtml" />
     <Content Include="Areas\RRHH\Views\ImportacionHoras\Duplicar.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\ActivoFijo\_GridViewPartial_ActivoFijo_importacion.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
