--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9523,6 +9523,9 @@
     <Content Include="Areas\RRHH\Views\EmpleadoNovedad\_CmbRubro_EmpNov.cshtml" />
     <Content Include="Areas\RRHH\Views\Prestamos\_CmbRubro_Prestamos.cshtml" />
     <Content Include="Areas\ActivoFijo\Views\ActivoFijo\_GridViewPartial_ActivoFijo_CtaCble_importacion.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\Proveedor\_GridViewPartial_proveedor_importacion.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Importar.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\Proveedor\_GridViewPartial_clase_proveedor_importacion.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
