--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -257,6 +257,7 @@
     <Compile Include="Inventario\in_ProductoTipo_Info.cs" />
     <Compile Include="Inventario\in_Producto_Composicion_Info.cs" />
     <Compile Include="Inventario\in_Producto_Info.cs" />
+    <Compile Include="Inventario\in_Producto_x_fa_NivelDescuento_Info.cs" />
     <Compile Include="Inventario\in_producto_x_tb_bodega_Costo_Historico_Info.cs" />
     <Compile Include="Inventario\in_producto_x_tb_bodega_Info.cs" />
     <Compile Include="Inventario\in_subgrupo_Info.cs" />
