--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -675,6 +675,7 @@
     <Compile Include="Inventario\in_ProductoTipo_Data.cs" />
     <Compile Include="Inventario\in_Producto_Composicion_Data.cs" />
     <Compile Include="Inventario\in_Producto_Data.cs" />
+    <Compile Include="Inventario\in_Producto_x_fa_NivelDescuento_Data.cs" />
     <Compile Include="Inventario\in_producto_x_tb_bodega_Costo_Historico_Data.cs" />
     <Compile Include="Inventario\in_producto_x_tb_bodega_Data.cs" />
     <Compile Include="Inventario\in_subgrupo_Data.cs" />
@@ -743,6 +744,9 @@
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
     <Compile Include="in_Producto_Composicion.cs">
+      <DependentUpon>Model_inventario.tt</DependentUpon>
+    </Compile>
+    <Compile Include="in_Producto_x_fa_NivelDescuento.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
     <Compile Include="in_producto_x_tb_bodega.cs">
