--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -389,6 +389,8 @@
     <Compile Include="RRHH\ro_HorasProfesores_det_Bus.cs" />
     <Compile Include="RRHH\ro_marcaciones_tipo_Bus.cs" />
     <Compile Include="RRHH\ro_marcaciones_x_empleado_Bus.cs" />
+    <Compile Include="RRHH\ro_NominasPagosCheques_Bus.cs" />
+    <Compile Include="RRHH\ro_NominasPagosCheques_det_Bus.cs" />
     <Compile Include="RRHH\ro_Nomina_Tipoliqui_Bus.cs" />
     <Compile Include="RRHH\ro_nomina_tipo_Bus.cs" />
     <Compile Include="RRHH\ro_nomina_x_horas_extras_Bus.cs" />
