--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -421,6 +421,8 @@
     <Compile Include="RRHH\ro_HorasProfesores_Info.cs" />
     <Compile Include="RRHH\ro_marcaciones_tipo_Info.cs" />
     <Compile Include="RRHH\ro_marcaciones_x_empleado_Info.cs" />
+    <Compile Include="RRHH\ro_NominasPagosCheques_det_Info.cs" />
+    <Compile Include="RRHH\ro_NominasPagosCheques_Info.cs" />
     <Compile Include="RRHH\ro_Nomina_Tipoliqui_Info.cs" />
     <Compile Include="RRHH\ro_nomina_tipo_Info.cs" />
     <Compile Include="RRHH\ro_nomina_x_horas_extras_det_Info.cs" />
