--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9537,6 +9537,14 @@
     <Content Include="Areas\RRHH\Views\PagosEnCheques\Index.cshtml" />
     <Content Include="Areas\RRHH\Views\PagosEnCheques\Modificar.cshtml" />
     <Content Include="Areas\RRHH\Views\PagosEnCheques\Nuevo.cshtml" />
+    <Content Include="Areas\Inventario\Views\Producto\Importar.cshtml" />
+    <Content Include="Areas\Inventario\Views\Producto\_GridViewPartial_LineaPro_importacion.cshtml" />
+    <Content Include="Areas\Inventario\Views\Producto\_GridViewPartial_CategoriaPro_importacion.cshtml" />
+    <Content Include="Areas\Inventario\Views\Producto\_GridViewPartial_GrupoPro_importacion.cshtml" />
+    <Content Include="Areas\Inventario\Views\Producto\_GridViewPartial_SubgrupoPro_importacion.cshtml" />
+    <Content Include="Areas\Inventario\Views\Producto\_GridViewPartial_MarcaPro_importacion.cshtml" />
+    <Content Include="Areas\Inventario\Views\Producto\_GridViewPartial_PresentacionPro_importacion.cshtml" />
+    <Content Include="Areas\Inventario\Views\Producto\_GridViewPartial_ProductoPro_importacion.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
