--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -131,6 +131,7 @@
     <Compile Include="CuentasPorPagar\cp_retencion_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_retencion_det_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_retencion_x_ct_cbtecble_Bus.cs" />
+    <Compile Include="CuentasPorPagar\cp_SolicitudPago_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_TipoDocumento_Bus.cs" />
     <Compile Include="Facturacion\fa_CambioProductoDet_Bus.cs" />
     <Compile Include="Facturacion\fa_CambioProducto_Bus.cs" />
