--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9546,6 +9546,10 @@
     <Content Include="Areas\CuentasPorPagar\Views\Deudas\_GridViewPartial_deudas_det_PorIngresar.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\SolicitudPago\Index.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\SolicitudPago\_GridViewPartial_solicitud_pago.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\SolicitudPago\Nuevo.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\SolicitudPago\_CmbProveedor_CXP.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\SolicitudPago\Nuevo - Copia.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\SolicitudPago\Nuevo - Copia - Copia.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
