--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -453,6 +453,7 @@
     <Compile Include="SeguridadAcceso\seg_Menu_x_Empresa_x_Usuario_Info.cs" />
     <Compile Include="SeguridadAcceso\seg_usuario_Info.cs" />
     <Compile Include="SeguridadAcceso\seg_Usuario_x_Empresa_Info.cs" />
+    <Compile Include="vwcaj_Caja_Movimiento_por_conciliar_Info.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
