--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1728,6 +1728,9 @@
     <Compile Include="vwcaj_Caja_Movimiento.cs">
       <DependentUpon>Model_caja.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwcaj_Caja_Movimiento_por_conciliar.cs">
+      <DependentUpon>Model_caja.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwcaj_Caja_Movimiento_x_Conciliar.cs">
       <DependentUpon>Model_caja.tt</DependentUpon>
     </Compile>
