--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9559,6 +9559,8 @@
     <Content Include="Areas\RRHH\Views\PrestamosAprobacion\Index.cshtml" />
     <Content Include="Areas\RRHH\Views\HorarioPlanificacion\_CmbEmpleado_Planificacion.cshtml" />
     <Content Include="Areas\RRHH\Views\Prestamos\Abono.cshtml" />
+    <Content Include="Areas\Reportes\Views\BancoReportes\BAN_006_Masivo.cshtml" />
+    <Content Include="Areas\Reportes\Views\BancoReportes\BAN_005_Masivo.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
