--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -176,6 +176,7 @@
     <Compile Include="General\tb_modulo_Bus.cs" />
     <Compile Include="General\tb_moneda_Bus.cs" />
     <Compile Include="General\tb_pais_Bus.cs" />
+    <Compile Include="General\tb_parametro_Bus.cs" />
     <Compile Include="General\tb_parroquia_Bus.cs" />
     <Compile Include="General\tb_persona_Bus.cs" />
     <Compile Include="General\tb_persona_tipo_Bus.cs" />
