--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -203,6 +203,7 @@
     <Compile Include="General\tb_modulo_Info.cs" />
     <Compile Include="General\tb_moneda_Info.cs" />
     <Compile Include="General\tb_pais_Info.cs" />
+    <Compile Include="General\tb_parametro_Info.cs" />
     <Compile Include="General\tb_parroquia_Info.cs" />
     <Compile Include="General\tb_persona_Info.cs" />
     <Compile Include="General\tb_persona_tipo_Info.cs" />
