--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -344,6 +344,7 @@
     <Compile Include="Areas\General\Controllers\ImagenesController.cs" />
     <Compile Include="Areas\General\Controllers\ImpuestoController.cs" />
     <Compile Include="Areas\General\Controllers\LogErrorController.cs" />
+    <Compile Include="Areas\General\Controllers\ParametrosGeneralController.cs" />
     <Compile Include="Areas\General\Controllers\ProcesosBancariosPorEmpresaController.cs" />
     <Compile Include="Areas\General\Controllers\ReportesPorUsuarioController.cs" />
     <Compile Include="Areas\General\Controllers\ModuloController.cs" />
@@ -9572,7 +9573,6 @@
     <Content Include="Areas\Banco\Views\BancoCuenta\_GridViewPartial_Documento_importacion.cshtml" />
     <Content Include="Areas\RRHH\Views\Empleado\Importar.cshtml" />
     <Content Include="Areas\Banco\Views\BancoCuenta\Disenar.cshtml" />
-
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -9648,6 +9648,7 @@
     <Folder Include="Areas\CuentasPorPagar\Models\" />
     <Folder Include="Areas\Facturacion\Models\" />
     <Folder Include="Areas\General\Models\" />
+    <Folder Include="Areas\General\Views\ParametrosGeneral\" />
     <Folder Include="Areas\Importacion\Models\" />
     <Folder Include="Areas\Inventario\Models\" />
     <Folder Include="Areas\Presupuesto\Models\" />
