--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9573,6 +9573,7 @@
     <Content Include="Areas\Banco\Views\BancoCuenta\_GridViewPartial_Documento_importacion.cshtml" />
     <Content Include="Areas\RRHH\Views\Empleado\Importar.cshtml" />
     <Content Include="Areas\Banco\Views\BancoCuenta\Disenar.cshtml" />
+    <Content Include="Areas\General\Views\ParametrosGeneral\Index.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -9648,7 +9649,6 @@
     <Folder Include="Areas\CuentasPorPagar\Models\" />
     <Folder Include="Areas\Facturacion\Models\" />
     <Folder Include="Areas\General\Models\" />
-    <Folder Include="Areas\General\Views\ParametrosGeneral\" />
     <Folder Include="Areas\Importacion\Models\" />
     <Folder Include="Areas\Inventario\Models\" />
     <Folder Include="Areas\Presupuesto\Models\" />
