--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -409,6 +409,9 @@
     <Compile Include="RRHH\ro_rol_detalle_x_rubro_acumulado_Bus.cs" />
     <Compile Include="RRHH\ro_rubros_calculados_Bus.cs" />
     <Compile Include="RRHH\ro_rubro_tipo_Bus.cs" />
+    <Compile Include="RRHH\ro_SancionesPorMarcaciones_Bus.cs" />
+    <Compile Include="RRHH\ro_SancionesPorMarcaciones_det_Bus.cs" />
+    <Compile Include="RRHH\ro_SancionesPorMarcaciones_x_novedad_Bus.cs" />
     <Compile Include="RRHH\ro_Solicitud_Vacaciones_x_empleado_Bus.cs" />
     <Compile Include="RRHH\ro_tabla_Impu_Renta_Bus.cs" />
     <Compile Include="RRHH\ro_tipo_gastos_personales_Bus.cs" />
