--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1438,6 +1438,9 @@
     <Compile Include="RRHH\ro_rol_detalle_x_rubro_acumulado_Data.cs" />
     <Compile Include="RRHH\ro_rubros_calculados_Data.cs" />
     <Compile Include="RRHH\ro_rubro_tipo_Data.cs" />
+    <Compile Include="RRHH\ro_SancionesPorMarcaciones_Data.cs" />
+    <Compile Include="RRHH\ro_SancionesPorMarcaciones_det_Data.cs" />
+    <Compile Include="RRHH\ro_SancionesPorMarcaciones_x_novedad_Data.cs" />
     <Compile Include="RRHH\ro_Solicitud_Vacaciones_x_empleado_Data.cs" />
     <Compile Include="RRHH\ro_tabla_Impu_Renta_Data.cs" />
     <Compile Include="RRHH\ro_tipo_gastos_personales_Data.cs" />
